fix broken links

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     content="As-Salam College School for elementary and secondary education one of the best schools in El-zaiton">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://el-salam-college.netlify.app/">
+  <meta property="og:url" content="https://as-salam-college.netlify.app/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="As-Salam College School">
   <meta property="og:description"
     content="As-Salam College School for elementary and secondary education one of the best schools in El-zaiton">
-  <meta property="og:image" content="https://el-salam-college.netlify.app/img/banner.jpg">
+  <meta property="og:image" content="https://as-salam-college.netlify.app/img/banner.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="el-salam-college.netlify.app">
-  <meta property="twitter:url" content="https://el-salam-college.netlify.app/">
+  <meta property="twitter:domain" content="as-salam-college.netlify.app">
+  <meta property="twitter:url" content="https://as-salam-college.netlify.app/">
   <meta name="twitter:title" content="As-Salam College School">
   <meta name="twitter:description"
     content="As-Salam College School for elementary and secondary education one of the best schools in El-zaiton">
-  <meta name="twitter:image" content="https://el-salam-college.netlify.app/img/banner.jpg">
+  <meta name="twitter:image" content="https://as-salam-college.netlify.app/img/banner.jpg">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
