sonnect to seo google

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
+  <meta name="google-site-verification" content="DncjwYBwJrUTwR0yQP4CLfSJnwaN8sTkIcuAU3OOiqU" />
+
 </head>
 
 <body>
