--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
 
+  <meta name="keywords"
+    content="school,as-salam-college,el-salam-college,كلية السلام,salam,college,as-salam,el-salam,boys,كلية السلام بنين,التجريبية">
+  <meta name="author" content="Amr Khaled,Abdelrhman ebian">
+
+
   <!-- HTML Meta Tags -->
   <title>As-Salam College School</title>
+  <meta name="title" content="As-Salam College School">
+
   <meta name="description"
     content="As-Salam College School for elementary and secondary education one of the best schools in El-zaiton">
 
@@ -34,8 +41,22 @@
     content="As-Salam College School for elementary and secondary education one of the best schools in El-zaiton">
   <meta name="twitter:image" content="https://as-salam-college.netlify.app/img/banner.jpg">
 
-  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-
+  <!-- Meta Tags Generated via https://www.
+    
+    opengraph.xyz -->
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "WebSite",
+        "name": "As-Salam-College",
+        "url": "https://as-salam-college.netlify.app/",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "{search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+      </script>
   <meta name="google-site-verification" content="DncjwYBwJrUTwR0yQP4CLfSJnwaN8sTkIcuAU3OOiqU" />
 
 </head>
