--- a/index.html
+++ b/index.html
@@ -63,60 +63,61 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-fourth fixed-top">
-    <!-- <div class="container-fluid"> -->
-    <div class="container">
-      <a class="navbar-brand fw-bold text-light" href="index.html">
-        <img src="img/logo.png" width="50px" height="45px" alt="" />
-        As-Salam College
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" href="index.html" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Home
-            </a>
-            <ul class="dropdown-menu dropdown-menu-dark">
-              <li><a class="dropdown-item" href="index.html">Homepage</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#about">About</a></li>
-              <li><a class="dropdown-item" href="#history">History</a></li>
-              <li><a class="dropdown-item" href="#activity">Activities</a></li>
-              <li><a class="dropdown-item" href="#comments">Comments</a></li>
-              <li><a class="dropdown-item" href="#contact">Contact Us</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="pages/achievement.html" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Achivements
-            </a>
-            <ul class="dropdown-menu dropdown-menu-dark">
-              <li><a class="dropdown-item" href="pages/achievement.html#achievements">Achievements</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="pages/achievement.html#teachers">Teachers</a></li>
-              <li><a class="dropdown-item" href="pages/achievement.html#comments">Comments</a></li>
-              <li><a class="dropdown-item" href="pages/achievement.html#contactus">Contact Us</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link drossnav" href="pages/dross.html">Dross</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-fourth fixed-top">
+      <!-- <div class="container-fluid"> -->
+      <div class="container">
+        <a class="navbar-brand fw-bold text-light" href="index.html">
+          <img src="img/logo.png" width="50px" height="45px" alt="" />
+          As-Salam College
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="index.html" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Home
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li><a class="dropdown-item" href="index.html">Homepage</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#about">About</a></li>
+                <li><a class="dropdown-item" href="#history">History</a></li>
+                <li><a class="dropdown-item" href="#activity">Activities</a></li>
+                <li><a class="dropdown-item" href="#comments">Comments</a></li>
+                <li><a class="dropdown-item" href="#contact">Contact Us</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="pages/achievement.html" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Achivements
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li><a class="dropdown-item" href="pages/achievement.html#achievements">Achievements</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="pages/achievement.html#teachers">Teachers</a></li>
+                <li><a class="dropdown-item" href="pages/achievement.html#comments">Comments</a></li>
+                <li><a class="dropdown-item" href="pages/achievement.html#contactus">Contact Us</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link drossnav" href="pages/dross.html">Dross</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <!-- </div> -->
-  </nav>
-
+      <!-- </div> -->
+    </nav>
+  </header>
   <!-- Scroll to Top Button -->
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="bi bi-arrow-up"></i></button>
 
@@ -312,7 +313,7 @@
       </div>
       <div class="row align-items-center justify-content-center">
         <!-- Contact Details -->
-        <a class="col-md-6  map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA" target="_blank">
+        <a rel="noopener" class="col-md-6  map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA" target="_blank">
           <span>Click here for location <i class="bi bi-hand-index-thumb-fill"></i></span></a>
         <!-- / End Contact Details -->
 
@@ -398,10 +399,11 @@
       &lt;
       <span class="text-purple">Developed By</span>
       &gt;
-      <a class="text-success text-decoration-none" target="_blank" href="https://www.linkedin.com/in/3mr5aled/">Amr
+      <a rel="noopener" class="text-success text-decoration-none" target="_blank"
+        href="https://www.linkedin.com/in/3mr5aled/">Amr
         Khaled</a>
       &
-      <a class="text-success text-decoration-none" target="_blank"
+      <a rel="noopener" class="text-success text-decoration-none" target="_blank"
         href="https://www.linkedin.com/in/abdelrhmanebian">Abdelrhman
         Ebian</a>
     </p>
