--- a/pages/dross.html
+++ b/pages/dross.html
@@ -13,61 +13,63 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-fourth fixed-top">
-        <div class="container">
-            <a class="navbar-brand fw-bold text-light" href="../index.html">
-                <img src="../img/logo.png" width="50px" height="45px" alt="" />
-                As-Salam College
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="../index.html" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Home
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="../index.html">Homepage</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="../index.html#about">About</a></li>
-                            <li><a class="dropdown-item" href="../index.html#history">History</a></li>
-                            <li><a class="dropdown-item" href="../index.html#activity">Activities</a></li>
-                            <li><a class="dropdown-item" href="../index.html#comments">Comments</a></li>
-                            <li><a class="dropdown-item" href="../index.html#contactus">Contact Us</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="achievement.html" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Achivements
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="achievement.html#achievements">Achievements</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="achievement.html#teachers">Teachers</a></li>
-                            <li><a class="dropdown-item" href="achievement.html#comments">Comments</a></li>
-                            <li><a class="dropdown-item" href="achievement.html#contact">Contact Us</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link drossnav active" href="dross.html">Dross</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-fourth fixed-top">
+            <div class="container">
+                <a class="navbar-brand fw-bold text-light" href="../index.html">
+                    <img src="../img/logo.png" width="50px" height="45px" alt="" />
+                    As-Salam College
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="../index.html" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Home
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" href="../index.html">Homepage</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="../index.html#about">About</a></li>
+                                <li><a class="dropdown-item" href="../index.html#history">History</a></li>
+                                <li><a class="dropdown-item" href="../index.html#activity">Activities</a></li>
+                                <li><a class="dropdown-item" href="../index.html#comments">Comments</a></li>
+                                <li><a class="dropdown-item" href="../index.html#contactus">Contact Us</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="achievement.html" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Achivements
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" href="achievement.html#achievements">Achievements</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="achievement.html#teachers">Teachers</a></li>
+                                <li><a class="dropdown-item" href="achievement.html#comments">Comments</a></li>
+                                <li><a class="dropdown-item" href="achievement.html#contact">Contact Us</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link drossnav active" href="dross.html">Dross</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        </div>
-    </nav>
-    <!-- <div class="container mt-4"> -->
+            </div>
+        </nav>
+        <!-- <div class="container mt-4"> -->
 
+    </header>
     <!-- Scroll to Top Button -->
     <!-- <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="bi bi-arrow-up"></i></button> -->
 
@@ -90,7 +92,7 @@
 
 
             <div>
-                <a target="_blank"
+                <a rel="noopener" target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
                     <button class="btn btn-dark m-3 text-nowrap"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
@@ -110,7 +112,7 @@
 
 
             <div>
-                <a target="_blank"
+                <a rel="noopener" target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
                     <button class="btn btn-dark m-3 text-nowrap"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
@@ -130,11 +132,11 @@
 
 
             <div>
-                <a target="_blank"
+                <a rel="noopener" target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
                     <button class="btn btn-dark m-3 text-nowrap"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
-                <a target="_blank"
+                <a rel="noopener" target="_blank"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSfhTDwZJJmuQ1esnxeLXoOqaPddzZAMhVYq4y4Pt15VFyDmcg/viewform?vc=0&c=0&w=1&flr=0"><button
                         class="m-3 btn btn-warning text-light fw-bold text-nowrap"><i class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
@@ -151,11 +153,11 @@
 
 
             <div>
-                <a target="_blank"
+                <a rel="noopener" target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
                     <button class="btn btn-dark m-3 text-nowrap"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
-                <a target="_blank"
+                <a rel="noopener" target="_blank"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSe9Y-zFcZP-NkzObKYvp0KIw-NUoSFAxbc6AItSlckNPBGvMQ/viewform?vc=0&c=0&w=1&flr=0"><button
                         class="m-3 btn btn-warning text-light fw-bold text-nowrap"><i class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
@@ -172,11 +174,11 @@
 
 
             <div>
-                <a target="_blank"
+                <a rel="noopener" target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
                     <button class="btn btn-dark m-3 text-nowrap"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
-                <a target="_blank"
+                <a rel="noopener" target="_blank"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSdnp3ItlsrGIGoCP5RWvmMKrGWLwIy37nPDK4Moq7Tdd6Nxng/viewform?vc=0&c=0&w=1&flr=0"><button
                         class="m-3 btn btn-warning text-light fw-bold text-nowrap"><i class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
@@ -198,11 +200,11 @@
             &lt;
             <span class="text-purple">Developed By</span>
             &gt;
-            <a class="text-success text-decoration-none" target="_blank"
+            <a rel="noopener" class="text-success text-decoration-none" target="_blank"
                 href="https://www.linkedin.com/in/3mr5aled/">Amr
                 Khaled</a>
             &
-            <a class="text-success text-decoration-none" target="_blank"
+            <a rel="noopener" class="text-success text-decoration-none" target="_blank"
                 href="https://www.linkedin.com/in/abdelrhmanebian">Abdelrhman
                 Ebian</a>
         </p>
