--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </li>
                 <li><a class="dropdown-item" href="pages/achievement.html#teachers">Teachers</a></li>
                 <li><a class="dropdown-item" href="pages/achievement.html#comments">Comments</a></li>
-                <li><a class="dropdown-item" href="pages/achievement.html#contactus">Contact Us</a></li>
+                <li><a class="dropdown-item" href="pages/achievement.html#contact">Contact Us</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -371,7 +371,7 @@
           <div class="social-icons-block contact-meta-block">
             <i class="d-inline fs-4 bi bi-chat-dots-fill"></i>
             <h4 class="d-inline"> We are social</h4>
-            <ul class="ms-md-4 list-inline social-icon">
+            <ul class="ms-md-2 list-inline social-icon">
               <li class="list-inline-item">
                 <a href="#" target="_blank"><i class="fs-2 text-muted bi bi-facebook"></i></a>
               </li>
@@ -380,6 +380,9 @@
               </li>
               <li class="list-inline-item">
                 <a href="#" target="_blank"><i class="fs-2 text-muted bi bi-messenger"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" target="_blank"><i class="fs-2 text-muted bi bi-linkedin"></i></a>
               </li>
             </ul>
           </div>
