--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -41,7 +41,7 @@
                                 <li><a class="dropdown-item" href="../index.html#history">History</a></li>
                                 <li><a class="dropdown-item" href="../index.html#activity">Activities</a></li>
                                 <li><a class="dropdown-item" href="../index.html#comments">Comments</a></li>
-                                <li><a class="dropdown-item" href="../index.html#contactus">Contact Us</a></li>
+                                <li><a class="dropdown-item" href="../index.html#contact">Contact Us</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -347,7 +347,7 @@
                     <div class="social-icons-block contact-meta-block">
                         <i class="d-inline fs-4 bi bi-chat-dots-fill"></i>
                         <h4 class="d-inline"> We are social</h4>
-                        <ul class="ms-4 list-inline social-icon">
+                        <ul class="ms-md-2 list-inline social-icon">
                             <li class="list-inline-item">
                                 <a href="#"><i class="fs-2 text-muted bi bi-facebook"></i></a>
                             </li>
@@ -356,6 +356,9 @@
                             </li>
                             <li class="list-inline-item">
                                 <a href="#"><i class="fs-2 text-muted bi bi-messenger"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#"><i class="fs-2 text-muted bi bi-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
