history and read more function

--- a/index.html
+++ b/index.html
@@ -173,12 +173,26 @@
           <img src="img/banner.webp" class="img-fluid imghover" alt="" />
         </div>
         <div class="m-5 w-75">
-          <p class="lead">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit
-            amet eius, sed, voluptate similique cupiditate aliquid laboriosam
-            asperiores atque totam sapiente minima est natus eos ullam ex
-            omnis, nesciunt esse!
+          <p class="rtl lead text-end">
+            تأسست المدرسة في 24 أبريل 1936 كمدرسة تبشيرية إنجليزية. إنها من أكبر مدارس اللغة الإنجليزية في مصر الجديدة.
+            كان يقع في قصر القبة على عقار بمساحة 5 أفدنة تم شراؤه مقابل 11000 جنيه إسترليني. تبرع بالمال أصدقاء من
+            إنجلترا ومصر. كان اسم المدرسة هو English Mission College وظل كذلك حتى عام 1956 عندما سلم المبشرون
+            البريطانيون المدرسة إلى الكنيسة الأسقفية في مصر. في الأيام الأولى ، كانت المدرسة تسجل طلابًا من الطبقة
+            البرجوازية بشكل أساسي. منحت الحكومة البريطانية المدرسة 1500 جنيه إسترليني في عام 1939 لتوسيع الحرم
+            الجامعي.
+            <span id="dots">...</span><span id="more">
+
+              وهي مقسمة إلى روضة أطفال ومدرسة إعدادية مختلطة ومدرستين منفصلتين لكل جنس في المرحلتين الإعدادية والثانوية.
+              يحتوي على حديقة ومرآب كبير للحافلات.
+
+              في عام 1956 ، تم تغيير الاسم إلى Episcopal Mission College. في عام 1958 ، تم تغيير اسم المدرسة إلى كلية
+              السلام من قبل وزارة التربية والتعليم المصرية التي سيطرت على جميع المدارس البريطانية والفرنسية في مصر.
+              (<a class="ltr fw-normal" target="_blank" rel="noopener"
+                href="https://en.wikipedia.org/wiki/As-Salam_College">ikipedia<i class="bi bi-wikipedia"
+                  aria-hidden="true"></i></a>)
+            </span>
           </p>
+          <button class="btn btn-light border-1 border-dark" onclick="myFunction()" id="readbutton">Read more</button>
         </div>
       </div>
     </div>
