--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
                   aria-hidden="true"></i></a>)
             </span>
           </p>
-          <button class="btn btn-light border-1 border-dark" onclick="myFunction()" id="readbutton">Read more</button>
+          <button class="btn btn-light border-1 border-dark text-nowrap" onclick="myFunction()" id="readbutton">Read
+            more</button>
         </div>
       </div>
     </div>
