--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                   aria-hidden="true"></i></a>)
             </span>
           </p>
-          <button class="btn btn-light border-1 border-dark text-nowrap" onclick="myFunction()" id="readbutton">Read
+          <button class="btn btn-light border-1 border-dark text-nowrap" onclick="readfunction()" id="readbutton">Read
             more</button>
         </div>
       </div>
