--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
   <meta name="keywords"
-    content="school,as-salam-college,el-salam-college,كلية السلام,salam,college,as-salam,el-salam,boys,كلية السلام بنين,التجريبية">
+    content="school,as-salam-college,el-salam-college,كلية السلام,salam,college,as-salam,el-salam,boys,كلية السلام بنين,لغات">
   <meta name="author" content="Amr Khaled,Abdelrhman ebian">
 
 
