turns website into arabic and adds headmaster quota

--- a/pages/dross.html
+++ b/pages/dross.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>As-Salam College School- Achievement</title>
+    <title>كلية السلام الرسمية لغات بنين - دروس</title>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
@@ -14,53 +14,50 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-fourth fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-fourth fixed-top rtl">
             <div class="container">
                 <a class="navbar-brand fw-bold text-light" href="../index.html">
                     <img src="../img/logo.png" width="50px" height="45px" alt="" />
-                    As-Salam College
-                </a>
+                    كلية السلام الرسمية لغات بنين </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-lg-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="../index.html" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Home
+                                الصفحة الرئيسية
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="../index.html">Homepage</a></li>
+                                <li><a class="dropdown-item" href="../index.html">الصفحة الرئيسية</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../index.html#about">About</a></li>
-                                <li><a class="dropdown-item" href="../index.html#history">History</a></li>
-                                <li><a class="dropdown-item" href="../index.html#activity">Activities</a></li>
-                                <li><a class="dropdown-item" href="../index.html#comments">Comments</a></li>
-                                <li><a class="dropdown-item" href="../index.html#contact">Contact Us</a></li>
+                                <li><a class="dropdown-item" href="../index.html#about">عنا</a></li>
+                                <li><a class="dropdown-item" href="../index.html#history">تاريخنا</a></li>
+                                <li><a class="dropdown-item" href="../index.html#activity">الأنشطة</a></li>
+                                <li><a class="dropdown-item" href="../index.html#comments">التعليقات</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="achievement.html" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Achivements
+                                الإنجازات
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="achievement.html#achievements">Achievements</a></li>
+                                <li><a class="dropdown-item" href="achievement.html#achievements">الإنجازات</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="achievement.html#teachers">Teachers</a></li>
-                                <li><a class="dropdown-item" href="achievement.html#comments">Comments</a></li>
-                                <li><a class="dropdown-item" href="achievement.html#contact">Contact Us</a></li>
+                                <li><a class="dropdown-item" href="achievement.html#teachers">المعلمون</a></li>
+                                <li><a class="dropdown-item" href="achievement.html#contact">تواصل معنا</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link drossnav active" href="dross.html">Dross</a>
+                            <a class="nav-link drossnav active" href="dross.html">دروس</a>
                         </li>
                     </ul>
                 </div>
@@ -198,7 +195,7 @@
         class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth">
         <p class="col-md-4 mb-0 mfooter text-light">
             &lt;
-            <span class="text-purple">Developed By</span>
+            <span class="text-purple">تم تطويره بواسطة</span>
             &gt;
             <a rel="noopener" class="text-success text-decoration-none" target="_blank"
                 href="https://www.linkedin.com/in/3mr5aled/">Amr
@@ -214,15 +211,15 @@
             <img src="../img/logo.png" width="50px" height="50px" alt="" />
         </a>
 
-        <ul class="nav col-md-4 justify-content-end">
+        <ul class="nav col-md-4 justify-content-start rtl p-0">
             <li class="nav-item pe-2 pe-md-0 mfootnav">
-                <a href="../index.html" class="nav-link px-2 text-muted">Homepage</a>
+                <a href="../index.html" class="nav-link px-2 text-muted">الصفحة الرئيسية</a>
             </li>
             <li class="nav-item mfootnav">
-                <a href="achievement.html" class="nav-link px-2 text-muted">Achivements</a>
+                <a href="achievement.html" class="nav-link px-2 text-muted">الإنجازات</a>
             </li>
             <li class="nav-item ps-2 ps-md-0 mfootnav">
-                <a href="dross.html" class="nav-link px-2 text-muted">Dross</a>
+                <a href="dross.html" class="nav-link px-2 text-muted">دروس</a>
             </li>
         </ul>
     </footer>
