--- a/index.html
+++ b/index.html
@@ -139,14 +139,15 @@
             <div class="card-body text-center">
               <div class="card-title text-capitalize h4">مهمتنا</div>
               <div class="card-text lead">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, cum. </div>
+                .أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض المتعة
+              </div>
             </div>
           </div>
           <div class="card bg-main hoverbg p-3 m-2 m-md-0 mb-md-2">
             <div class="card-body text-center">
               <div class="card-title text-capitalize h4">رؤيتنا</div>
-              <div class="card-text lead rtl">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, explicabo! </div>
+              <div class="card-text lead">
+                .أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض المتعة </div>
             </div>
           </div>
         </div>
