--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
     <div class="container text-dark">
       <h2 class="special-heading mb-5 mt-md-4">تعرف علينا</h2>
       <div class="d-flex justify-content-around gap-3 align-items-center flex-column flex-lg-row">
-        <div class="text-start d-flex flex-column me-lg-5 justify-content-center">
+        <div class="text-start d-flex flex-column justify-content-center">
           <div class="card bg-main hoverbg p-3 m-2 m-md-0 mb-md-2">
             <div class="card-body text-center">
               <div class="card-title text-capitalize h4">مهمتنا</div>
               <div class="card-text lead">
-                .أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض المتعة
+                .أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض المتعة ، من الصعب
               </div>
             </div>
           </div>
@@ -147,7 +147,8 @@
             <div class="card-body text-center">
               <div class="card-title text-capitalize h4">رؤيتنا</div>
               <div class="card-text lead">
-                .أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض المتعة </div>
+                .أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض المتعة ، من الصعب
+              </div>
             </div>
           </div>
         </div>
@@ -165,7 +166,7 @@
         <div class="img-fluid imgcont">
           <img src="img/banner.webp" class="img-fluid imghover" alt="" />
         </div>
-        <div class="m-5 w-75">
+        <div class="m-3 w-75">
           <p class="rtl lead text-end">
             تأسست المدرسة في 24 أبريل 1936 كمدرسة تبشيرية إنجليزية. إنها من أكبر مدارس اللغة الإنجليزية في مصر الجديدة.
             كان يقع في قصر القبة على عقار بمساحة 5 أفدنة تم شراؤه مقابل 11000 جنيه إسترليني. تبرع بالمال أصدقاء من
