--- a/index.html
+++ b/index.html
@@ -348,14 +348,14 @@
     </a>
 
     <ul class="nav col-md-4 justify-content-start rtl p-0">
-      <li class="nav-item pe-2 pe-md-0 mfootnav">
-        <a href="index.html" class="nav-link text-muted">الصفحة الرئيسية</a>
+      <li class="nav-item me-2 pe-md-0 mfootnav">
+        <a href="index.html" class="nav-link px-2 text-muted text-nowrap">الصفحة الرئيسية</a>
       </li>
       <li class="nav-item mfootnav">
-        <a href="pages/achievement.html" class="nav-link text-muted">الإنجازات</a>
+        <a href="pages/achievement.html" class="nav-link px-2 text-muted">الإنجازات</a>
       </li>
-      <li class="nav-item ps-2 ps-md-0 mfootnav">
-        <a href="pages/dross.html" class="nav-link text-muted">دروس</a>
+      <li class="nav-item ms-2 ps-md-0 mfootnav">
+        <a href="pages/dross.html" class="nav-link px-2 text-muted">دروس</a>
       </li>
     </ul>
   </footer>
