--- a/pages/dross.html
+++ b/pages/dross.html
@@ -74,7 +74,7 @@
 
 
     <section class="fullpage d-flex justify-content-center flex-column container align-content-center text-center">
-        <div class="tab pb-3">
+        <div class="tab pb-3 rtl">
             <button class="tablinks" onclick="openCity(event, 'prep1')" id="defaultOpen">الصف الأول الإعدادي</button>
             <button class="tablinks" onclick="openCity(event, 'prep2')">الصف الثاني الإعدادي</button>
             <button class="tablinks" onclick="openCity(event, 'prep3')">الصف الثالث الإعدادي</button>
@@ -212,13 +212,13 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-start rtl p-0">
-            <li class="nav-item pe-2 pe-md-0 mfootnav">
-                <a href="../index.html" class="nav-link px-2 text-muted">الصفحة الرئيسية</a>
+            <li class="nav-item me-2 pe-md-0 mfootnav">
+                <a href="../index.html" class="nav-link px-2 text-muted text-nowrap">الصفحة الرئيسية</a>
             </li>
             <li class="nav-item mfootnav">
                 <a href="achievement.html" class="nav-link px-2 text-muted">الإنجازات</a>
             </li>
-            <li class="nav-item ps-2 ps-md-0 mfootnav">
+            <li class="nav-item ms-2 ps-md-0 mfootnav">
                 <a href="dross.html" class="nav-link px-2 text-muted">دروس</a>
             </li>
         </ul>
